[package]
name = "dangerzone-container"
version = "0.0.1"
edition = "2018"
description = "dangerzone container" 
keywords = ["dangerzone", "container"]
license = "GPL"
repository = "https://github.com/rimerosolutions/dangerzone-rust"
authors = [
	"Yves Zoundi <yves_zoundi@hotmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
poppler-rs = "0.18.0"
poppler-sys-rs = "0.18.0"
cairo-sys-rs = "0.14.9"
cairo-rs = { version = "0.14.9", features = ["png", "pdf"] }
tesseract-plumbing = "0.6.1"
lopdf = "0.27.0"
infer = "0.5.0"
cfb = "0.6.1"
zip = "0.5"

[[bin]]
name = "dangerzone-container"
path = "src/main.rs"
