[package]
name = "dangerzone-client"
version = "0.1.0"
edition = "2018"
description = "Dangerzone client" 
keywords = ["dangerzone", "client"]
license = "GPL"
repository = "https://github.com/rimerosolutions/dangerzone-rust"
authors = [
	"Yves Zoundi <yves_zoundi@hotmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
which = "4.2.2"
filetime = "0.2"
#fltk = { version = "1.3.7", features = ["fltk-bundled"] }
fltk = { git = "https://github.com/fltk-rs/fltk-rs.git", branch = "master" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
indicatif = "0.16.2"

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop_entry_parser = "1.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-services = "0.2.0"
core-foundation = "0.9.1"
percent-encoding = "2.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.9.0"

[[bin]]
name = "dangerzone-cli"
path = "src/main_cli.rs"

[[bin]]
name = "dangerzone-gui"
path = "src/main_gui.rs"
