[package]
name = "dangerzone-container"
version = "0.1.2"
edition = "2018"
description = "dangerzone container" 
keywords = ["dangerzone", "container"]
license = "GPL"
repository = "https://github.com/rimerosolutions/dangerzone-rust"
authors = [
	"Yves Zoundi <yves_zoundi@hotmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
poppler-rs = "0.18.0"
cairo-rs = { version = "0.14.9", features = ["png", "pdf"] }
tesseract-plumbing = "0.6.1"
lopdf = "0.27.0"
infer = "0.5.0"
cfb = "0.6.1"
zip = "0.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sys-locale = "0.2.0"
fluent-langneg = "0.13.0"
unic-langid = "0.9.0"
gettext = "0.4.0"
once_cell = "1.10.0"

[[bin]]
name = "dangerzone-container"
path = "src/main.rs"
