[package]
name = "dangerzone-httpclient"
version = "0.1.2"
edition = "2018"
description = "Dangerzone HTTP client" 
keywords = ["dangerzone", "remoting", "http"]
license = "GPL"
repository = "https://github.com/rimerosolutions/dangerzone-rust"
authors = [
	"Yves Zoundi <yves_zoundi@hotmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream", "multipart", "json"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = "0.7.1"
futures = { version = "0.3", default-features = false }
reqwest-eventsource = "0.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
url = "2.2.2"
clap = "2.33.3"
indicatif = "0.16.2"
dirs = "4.0.0"
toml = "0.5.9"
sys-locale = "0.2.0"
fluent-langneg = "0.13.0"
unic-langid = "0.9.0"
gettext = "0.4.0"
once_cell = "1.10.0"

[[bin]]
name = "dangerzone-httpclient"
path = "src/main.rs"
