[package]
name = "dangerzone-httpclient"
version = "0.1.3"
edition = "2018"
description = "Dangerzone HTTP client" 
keywords = ["dangerzone", "remoting", "http"]
license = "GPL"
repository = "https://github.com/rimerosolutions/dangerzone-rust"
authors = [
	"Yves Zoundi <yves_zoundi@hotmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream", "multipart", "json"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = "0.7.1"
futures = { version = "0.3", default-features = false }
reqwest-eventsource = "0.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
url = "2.2.2"
clap = "2.33.3"
indicatif = "0.16.2"
dirs = "4.0.0"
toml = "0.5.9"
dangerzone_l10n = { path = "../dangerzone_l10n" }

[build-dependencies]
polib = "0.1.0"

[[bin]]
name = "dangerzone-httpclient"
path = "src/main.rs"
