[package]
name = "dangerzone-httpserver"
version = "0.1.3"
edition = "2018"
description = "Dangerzone online service" 
keywords = ["dangerzone", "remoting", "http"]
license = "GPL"
repository = "https://github.com/rimerosolutions/dangerzone-rust"
authors = [
	"Yves Zoundi <yves_zoundi@hotmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
mime = "0.3.16"
once_cell = "1.10.0"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-io = "0.1.13"
tokio-rustls = "0.23.3"
futures = "0.3.21"
actix = "0.13.0"
actix-cors = "0.6.1"
actix-web = { version = "4.0.1", features=["rustls"] }
actix-multipart = "0.4.0"
actix-form-data = "0.6.2"
http-api-problem = "0.17.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
dirs = "4.0.0"
toml = "0.5.9"
dangerzone_l10n = { path = "../dangerzone_l10n" }

[build-dependencies]
polib = "0.1.0"

[[bin]]
name = "dangerzone-httpserver"
path = "src/main.rs"
