[package]
name = "entrusted-container"
version = "0.2.4"
edition = "2018"
description = "entrusted container" 
keywords = ["entrusted", "container"]
license = "GPL"
repository = "https://github.com/rimerosolutions/entrusted"
authors = [
	"Yves Zoundi <yves_zoundi@hotmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
poppler-rs = "0.18.0"
cairo-rs = { version = "0.14.9", features = ["png", "pdf"] }
tesseract-plumbing = "0.6.1"
lopdf = { version = "0.27.0", default-features = false, features = ["chrono_time", "nom_parser"] }
cfb = "0.7.3"
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
libreoffice-rs = "0.3.2"
entrusted_l10n = { path = "../entrusted_l10n" }

[build-dependencies]
polib = "0.1.0"

[[bin]]
name = "entrusted-container"
path = "src/main.rs"

[profile.release]
strip="debuginfo"
lto = true
codegen-units = 1
