[package]
name = "entrusted-webclient"
version = "0.2.3"
edition = "2018"
description = "Entrusted HTTP client" 
keywords = ["entrusted", "remoting", "http"]
license = "GPL"
repository = "https://github.com/rimerosolutions/entrusted"
authors = [
	"Yves Zoundi <yves_zoundi@hotmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream", "multipart", "json"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = "0.7.1"
futures = { version = "0.3", default-features = false }
reqwest-eventsource = "0.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
url = "2.2.2"
clap = "2.33.3"
indicatif = "0.16.2"
dirs = "4.0.0"
toml = "0.5.9"
entrusted_l10n = { path = "../entrusted_l10n" }
rpassword = "6.0"

[build-dependencies]
polib = "0.1.0"

[[bin]]
name = "entrusted-webclient"
path = "src/main.rs"
