[package]
name = "entrusted-client"
version = "0.2.7"
edition = "2021"
description = "Entrusted client"
keywords = ["entrusted", "client"]
license = "GPL"
repository = "https://github.com/rimerosolutions/entrusted"
authors = [
	"Yves Zoundi <yves_zoundi@hotmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.16.0"
clap = "4.0.27"
rpassword = "7.2.0"
which = "4.3.0"
filetime = "0.2.18"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
indicatif = "0.17.2"
dirs = "4.0.0"
toml = "0.5.9"
# Min requirement of Mac OS 12+, apparently starting with fltk 1.3.21
# TODO If we unlock the fltk version, also update release notes and container builder images...
fltk = { version = "=1.3.20", features = ["fltk-bundled"], optional = true }
minreq = { version = "2.6.0", features = ["json-using-serde", "https"] }
semver = "1.0.14"
libc = "0.2.137"
entrusted_l10n = { path = "../entrusted_l10n" }

[features]
default = []
gui = ["fltk"]

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop_entry_parser = "1.3.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-services = "0.2.0"
core-foundation = "0.9.3"
percent-encoding = "2.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10.1"
dunce = "1.0.3"

[build-dependencies]
embed-resource = "1.7.2" # stuck with 1.7.2 instead of latest now due to conflicts for toml > 0.5.8
polib = "0.1.0"

[[bin]]
name = "entrusted-cli"
path = "src/main_cli.rs"

[[bin]]
name = "entrusted-gui"
path = "src/main_gui.rs"
required-features = ["gui"]
