[package]
name = "entrusted-client"
version = "0.3.3"
edition = "2021"
description = "Entrusted client"
keywords = ["entrusted", "client"]
license = "GPL"
repository = "https://github.com/rimerosolutions/entrusted"
authors = [
	"Yves Zoundi <yves_zoundi@hotmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.0"
clap = "4.1.4"
rpassword = "7.2.0"
which = "7.0.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
uuid = { version = "1.2.2", features = ["v4"] }
indicatif = "0.17.3"
dirs = "6.0.0"
toml = "0.8.20"

minreq = { version = "2.6.0", features = ["json-using-serde", "https"] }
semver = "1.0.16"
libc = "0.2.139"
entrusted_l10n = { path = "../entrusted_l10n" }

[features]
default = []
gui = ["fltk"]

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop_entry_parser = "1.3.0"
fltk = { version = "1.5.6", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-services = "1.0.0"
core-foundation = "0.10.0"
fltk = { version = "1.5.6", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features=["shellapi"] }
winreg = "0.55.0"
dunce = "1.0.3"
fltk = { version = "1.5.6", optional = true }

[build-dependencies]
embed-resource = "3.0.2"
polib = "0.2.0"

[dev-dependencies]
assert_cmd = "2.0"
cucumber = "0.21.1"
futures = "0.3"

[[bin]]
name = "entrusted-cli"
path = "src/main_cli.rs"

[[bin]]
name = "entrusted-gui" 
path = "src/main_gui.rs"
required-features = ["gui"]

[[test]]
name = "happy_path"
harness = false  # allows Cucumber to print output instead of libtest

