[package]
name = "entrusted-container"
version = "0.3.3"
edition = "2021"
description = "entrusted container" 
keywords = ["entrusted", "container"]
license = "GPL"
repository = "https://github.com/rimerosolutions/entrusted"
authors = [
	"Yves Zoundi <yves_zoundi@hotmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.2.2", features = ["v4"] }
once_cell = "1.17.0"
clap = "4.1.4"
image = { version = "0.24.5", default-features = false, features = ["gif", "jpeg", "png", "tiff", "jpeg_rayon"] }
poppler-rs = "0.20.0"
cairo-rs = { version = "0.16.7", features = ["png", "pdf"] }
file-format = "0.26"
tesseract-plumbing = "0.9.0"
lopdf = { version = "0.29.0", default-features = false, features = ["chrono_time", "pom_parser"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
libreoffice-rs = { version = "0.3.3" }
entrusted_l10n = { path = "../entrusted_l10n" }

[build-dependencies]
polib = "0.2.0"

[[bin]]
name = "entrusted-container"
path = "src/main.rs"