[package]
name = "entrusted-container"
version = "0.3.3"
edition = "2021"
description = "entrusted container" 
keywords = ["entrusted", "container"]
license = "GPL"
repository = "https://github.com/rimerosolutions/entrusted"
authors = [
	"Yves Zoundi <yves_zoundi@hotmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
uuid = { version = "1.2.2", features = ["v4"] }
once_cell = "1.17.0"
clap = "4.1.4"
image = { version = "0.25.6", default-features = false, features = ["gif", "jpeg", "png", "tiff", "bmp", "pnm"] }
file-format = { version = "0.26", default-features = false, features = ["reader-cfb", "reader-pdf", "reader-txt", "reader-zip", "reader-xml"] }
tesseract-sys = "0.6.1"
leptonica-sys = "0.4.9"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
entrusted_l10n = { path = "../entrusted_l10n" }
libreofficekit = { git = "https:/github.com/jacobtread/libreofficekit", rev="43c79eb" }
# branch="june/mupdf_1_25" see https://github.com/messense/mupdf-rs/pull/121
mupdf = { git = "https://github.com/itsjunetime/mupdf-rs", rev="4a1d074" }

[target.'cfg(target_os = "windows")'.dependencies]
dunce = "1.0.3"

[build-dependencies]
polib = "0.2.0"

[[bin]]
name = "entrusted-container"
path = "src/main.rs"
