[package]
name = "entrusted_l10n"
version = "0.3.3"
edition = "2021"
description = "Entrusted l10n library" 
keywords = ["entrusted", "l10n"]
license = "GPL"
repository = "https://github.com/rimerosolutions/entrusted"
authors = [
	"Yves Zoundi <yves_zoundi@hotmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.0"
locale_config = "0.3.0"
fluent-langneg = "0.13.0"
unic-langid = "0.9.1"
gettext = "0.4.0"