[package]
name = "entrusted-webclient"
version = "0.3.2"
edition = "2021"
description = "Entrusted HTTP client" 
keywords = ["entrusted", "remoting", "http"]
license = "GPL"
repository = "https://github.com/rimerosolutions/entrusted"
authors = [
	"Yves Zoundi <yves_zoundi@hotmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.0"
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls", "stream", "multipart", "json"] }
tokio = { version = "1.24.2", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
futures = { version = "0.3.25", default-features = false }
reqwest-eventsource = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
clap = "4.1.4"
indicatif = "0.17.3"
dirs = "4.0.0"
toml = "0.7.0"
entrusted_l10n = { path = "../entrusted_l10n" }
rpassword = "7.2.0"

[build-dependencies]
polib = "0.1.0"

[[bin]]
name = "entrusted-webclient"
path = "src/main.rs"

