[package]
name = "entrusted-webserver"
version = "0.3.3"
edition = "2021"
description = "Entrusted online service" 
keywords = ["entrusted", "remoting", "http"]
license = "GPL"
repository = "https://github.com/rimerosolutions/entrusted"
authors = [
	"Yves Zoundi <yves_zoundi@hotmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.0"
clap = "4.1.4"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
tokio = { version = "1.24.2", default-features = false, features = ["rt", "rt-multi-thread", "macros", "process", "io-util"] }
tokio-rustls = "0.26.2"
futures = { version = "0.3.25", default-features = false, features = ["std"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
axum = { version = "0.6.4", features = ["multipart", "http2"] }
tower-http = { version = "0.4.4", features = ["cors", "limit"] }
http-api-problem = "0.56.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
dirs = "4.0.0"
toml = "0.8.20"
base64-lib = "0.2.2"
bs58 = "0.4.0"
percent-encoding = "2.2.0"
which = "7.0.3"
entrusted_l10n = { path = "../entrusted_l10n" }

[build-dependencies]
polib = "0.2.0"

[[bin]]
name = "entrusted-webserver"
path = "src/main.rs"

